fix(footer): added new colors for contrast (#1227)

--- a/packages/core/src/components/footer/footer-group/footer-group.scss
+++ b/packages/core/src/components/footer/footer-group/footer-group.scss
@@ -6,8 +6,7 @@
   .footer-top-title {
     font: var(--tds-headline-07);
     letter-spacing: var(--tds-headline-07-ls);
-    opacity: var(--tds-footer-top-title-opacity);
-    color: var(--tds-footer-top-links);
+    color: var(--tds-footer-top-links-header);
     padding-bottom: 8px;
 
     *,
